# keboola_amplitude

./: .gitignore  README.md  main.py  pyproject.toml
amplitude_driver/: __init__.py  client.py  exceptions.py
amplitude_driver/tests/: __init__.py  conftest.py  test_client.py  test_exceptions.py  test_integration.py
docs/: AMPLITUDE_API_ANALYSIS.json  AMPLITUDE_CRITICAL_FINDINGS.md  AMPLITUDE_QUICK_REFERENCE.md  ANALYSIS_SUMMARY.md
samples/: user_properties_clv_segments.csv
scripts/: export_nov_12_data.py  generate_sample_data.py
